tests/ui/traits/final/overriding-rpitit.stderr
error: cannot override `bar` because it already has a `final` definition in the trait
  --> $DIR/overriding-rpitit.rs:14:5
   |
LL |     fn bar() -> impl Clone {}
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
note: `bar` is marked final here
  --> $DIR/overriding-rpitit.rs:6:5
   |
LL |     final fn bar() -> impl Clone {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

